# contextual-encoder

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
examples/: contexts.rs
src/: c.rs  csharp.rs  css.rs  csv.rs  display.rs  engine.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  lib.rs  php.rs  python.rs  ruby.rs  rust.rs  shell.rs  sql.rs  toml.rs  uri.rs  xml.rs  yaml.rs
tests/: conformance.rs
