[package]
name = "contextual-encoder"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["cyber witchery labs"]
license = "MIT"
description = "contextual output encoding for xss defense and safe literal embedding, inspired by the owasp java encoder"
repository = "https://github.com/cyberwitchery/contextual-encoder"
readme = "README.md"
keywords = ["security", "xss", "encoding", "html", "owasp"]
categories = ["web-programming", "encoding"]
exclude = [".github/", "AGENTS.md", "deny.toml", "unsafe-budget.lock"]

[lints.rust]
unsafe_code = "forbid"
